[package]
name = "wars-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
# bulk-memory-lowering.workspace = true
proc-macro2 = "1.0.72"
quote = "1.0.34"
sha3.workspace = true
syn = "2.0.43"

waffle.workspace = true
